# agent-sandbox-tool

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md  architecture.md  design-decisions.md  execution-flow.md  modules.md
docs/design-docs/: core-beliefs.md  execution-flow.md  index.md  modules.md
docs/exec-plans/: PLAN_TEMPLATE.md  index.md  tech-debt-tracker.md
docs/exec-plans/active/: README.md
docs/exec-plans/completed/e2e-workflow-readiness/: PLAN_e2e-workflow-readiness.md
docs/exec-plans/completed/e2e-workflow-readiness/state/: feature-list.json  progress.jsonl  session-state.json
docs/exec-plans/completed/harness-knowledge-migration/: PLAN_harness-knowledge-migration.md
docs/exec-plans/completed/harness-knowledge-migration/state/: feature-list.json  progress.jsonl  session-state.json
docs/exec-plans/completed/senior-feedback-productionization/: PLAN_senior-feedback-productionization.md
docs/exec-plans/completed/senior-feedback-productionization/state/: feature-list.json  progress.jsonl  session-state.json
docs/product-specs/: index.md  library-charter.md
docs/references/: index.md  testing.md
scripts/: generate_db_schema.py
scripts/execplan/: check.sh  validate-state.mjs
src/agent_sandbox/: __init__.py  cli.py  config.py  diagnostics.py  exceptions.py  logging.py  manager.py  models.py  session.py  state.py  tool.py
src/agent_sandbox/backend/: __init__.py  base.py  modal_backend.py
src/agent_sandbox/execution/: __init__.py  protocol.py  python_runner.py
src/agent_sandbox/server/: __init__.py  app.py  settings.py
tests/: fakes.py  test_artifacts.py  test_async_session.py  test_cli.py  test_config.py  test_diagnostics.py  test_manager.py  test_modal_backend.py  test_python_runner.py  test_server.py  test_session.py  test_state.py  test_tool.py
tests/integration/: test_modal_backend.py
