[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "agent-sandbox-modal"
version = "0.2.0"
description = "Embeddable Modal sandbox tooling for securely running untrusted code in developer workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ibrahim" }]
keywords = ["agent", "sandbox", "modal", "llm", "code-execution"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Security",
]
dependencies = [
  "modal>=1.3.4,<2.0.0",
  "pydantic>=2.8,<3.0",
]

[project.urls]
Homepage = "https://github.com/Saidiibrahim/agent-sandbox-tool"
Repository = "https://github.com/Saidiibrahim/agent-sandbox-tool"
Issues = "https://github.com/Saidiibrahim/agent-sandbox-tool/issues"

[project.scripts]
agent-sandbox = "agent_sandbox.cli:main"

[project.optional-dependencies]
server = [
  "fastapi>=0.111,<1.0",
  "pydantic-settings>=2.4,<3.0",
  "uvicorn>=0.30,<1.0",
]
dev = [
  "build>=1.2",
  "httpx>=0.27",
  "mypy>=1.11",
  "pre-commit>=3.8",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.6.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_sandbox"]

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/pyproject.toml",
  "/src",
  "/tests",
  "/docs",
  "/scripts",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PIE", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --cov=agent_sandbox --cov-report=term-missing"
testpaths = ["tests"]
markers = [
  "integration: tests that require a real Modal account and network access",
]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
pretty = true
mypy_path = ["src"]

[tool.coverage.report]
skip_empty = true
show_missing = true
